objects/ERP_Key_Combination__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Combination_Code__c</fullName>
        <label>Key Combination Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination_Tech__c</fullName>
        <label>Key Combination Tech</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Combination_Type_Text__c</fullName>
        <description>Used to Concatenate the Key Combination Type feld values and use it in Criteria Based Sharing,</description>
        <label>Key Combination Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination_Type__c</fullName>
        <label>Key Combination Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Net Floor</fullName>
                </value>
                <value>
                    <fullName>Net Reference</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Combination__c</fullName>
        <label>Key Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Application_Id__c</fullName>
        <label>SAP Application Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Client_Id__c</fullName>
        <label>SAP Client Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Cluster__c</fullName>
        <label>SAP Cluster</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Key_Combination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Key Combination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ERP Key Combination</label>
    <nameField>
        <displayFormat>ERP_KC-{00000}</displayFormat>
        <label>ERP Key Combination Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Key Combination</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>